@startuml

title __CUSTOMPLUGINS's Class Diagram__\n

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Backend {
      package sud_tanj.com.icare.Backend.Plugins {
        package sud_tanj.com.icare.Backend.Plugins.CustomPlugins {
          class AirQualitySensor {
              {static} + IDENTIFICATION : String
              {static} + airQualitySensor : AirQualitySensor
              - value : double
              {static} + getInstance()
              + run()
              + onDataReceived()
              + onAnalysisDone()
              + AirQualitySensor()
          }
        }
      }
    }
  }
  

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Backend {
      package sud_tanj.com.icare.Backend.Plugins {
        package sud_tanj.com.icare.Backend.Plugins.CustomPlugins {
          class ArduinoExample {
              {static} + IDENTIFICATION : String
              {static} - arduinoExample : ArduinoExample
              - value : String
              {static} + getInstance()
              + run()
              + onDataReceived()
              + onDispose()
          }
        }
      }
    }
  }
  

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Backend {
      package sud_tanj.com.icare.Backend.Plugins {
        package sud_tanj.com.icare.Backend.Plugins.CustomPlugins {
          class HCSR04UltrasonicSensor {
              {static} + IDENTIFICATION : String
              {static} - hcsr04UltrasonicSensor : HCSR04UltrasonicSensor
              - value : Double
              {static} + getInstance()
              + run()
              + onDataReceived()
              + onAnalysisDone()
          }
        }
      }
    }
  }
  

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Backend {
      package sud_tanj.com.icare.Backend.Plugins {
        package sud_tanj.com.icare.Backend.Plugins.CustomPlugins {
          class LolinExample {
              {static} + IDENTIFICATION : String
              - value : String
              {static} - arduinoExample : LolinExample
              + onDispose()
              {static} + getInstance()
              + onDataReceived()
              + run()
          }
        }
      }
    }
  }
  

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Backend {
      package sud_tanj.com.icare.Backend.Plugins {
        package sud_tanj.com.icare.Backend.Plugins.CustomPlugins {
          class LolinMultiExample {
              {static} + FIRST_MICROCONTROLLER_TAG : String
              {static} + SECOND_MICROCONTROLLER_TAG : String
              {static} + IDENTIFICATION : String
              {static} - lolinMultiExample : LolinMultiExample
              - firstMicrocontrollerValue : String
              - secondMicrocontrollerValue : String
              {static} + getInstance()
              + run()
              + onDispose()
              + onDataReceived()
          }
        }
      }
    }
  }
  

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Backend {
      package sud_tanj.com.icare.Backend.Plugins {
        package sud_tanj.com.icare.Backend.Plugins.CustomPlugins {
          class StepsCounter {
              {static} + IDENTIFICATION : String
              {static} - stepsCounter : StepsCounter
              - valueResult : double
              - personCondition : int
              - message : String
              {static} + getInstance()
              + run()
              + onCalculationDone()
              + onDispose()
              + onAnalysisDone()
              + onDataChange()
              + onCancelled()
              + StepsCounter()
          }
        }
      }
    }
  }
  

  AirQualitySensor -up-|> MicrocontrollerListener
  AirQualitySensor -up-|> AnalysisListener
  AirQualitySensor -up-|> BasePlugin
  ArduinoExample -up-|> MicrocontrollerListener
  ArduinoExample -up-|> BasePlugin
  HCSR04UltrasonicSensor -up-|> MicrocontrollerListener
  HCSR04UltrasonicSensor -up-|> AnalysisListener
  HCSR04UltrasonicSensor -up-|> BasePlugin
  LolinExample -up-|> MicrocontrollerListener
  LolinExample -up-|> BasePlugin
  LolinMultiExample -up-|> MicrocontrollerListener
  LolinMultiExample -up-|> BasePlugin
  LolinMultiExample o-- HealthData : healthData
  StepsCounter -up-|> ValueEventListener
  StepsCounter -up-|> SensorListener
  StepsCounter -up-|> AnalysisListener
  StepsCounter -up-|> BasePlugin


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
